# robot-control-playground

./: .gitignore  README.md  pyproject.toml
experiments/: franka_impedance_control.py  mass_spring.py
models/: fr3.urdf  fr3.xml  mass_spring.xml
src/robot_control_playground/controllers/: impedance_controller.py
src/robot_control_playground/simulators/: mujoco_sim.py  pinocchio_model.py
